# coding-playground

./: .gitignore  README.md  Readme.md
cplusplus/: CPP_Dev_Setup_Workflow.md  CPP_Resources.md  Readme.md
cplusplus/hello_worlds/hello_bazel_stages/hello_multi_file/main/: hello-greet.h
cplusplus/hello_worlds/hello_bazel_stages/hello_single_file/: bazel-bin  bazel-hello_single_file  bazel-out  bazel-testlogs
cplusplus/hello_worlds/hello_bazel_stages/hello_with_lib/main/: BUILD  hello-world.cc
cplusplus/quick_starts/hello_bazel_stages/hello_multi_file/main/: hello-world.cc
cplusplus/quick_starts/hello_bazel_stages/hello_single_file/main/: BUILD  hello_world.cc
cplusplus/quick_starts/hello_bazel_stages/hello_with_lib/: WORKSPACE
cplusplus/quick_starts/hello_bazel_stages/hello_with_lib/main/: hello-greet.h
cplusplus/quick_starts/hello_world_cpp/: helloworld.cpp
cplusplus/quick_starts/unit_test_frameworks/: README.org
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/: .clang-format  CMakeLists.txt  README.org
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/include/: const_string.h
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/src/: const_string.cpp
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/: CMakeLists.txt
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/boost_tests/: CMakeLists.txt
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/boost_tests/src/: const_string_tests.cpp
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/boost_ut_tests/: CMakeLists.txt
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/boost_ut_tests/src/: const_string_tests.cpp
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/catch2_tests/: CMakeLists.txt
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/catch2_tests/src/: const_string_tests.cpp
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/doc_tests/: CMakeLists.txt
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/doc_tests/src/: const_string_tests.cpp
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/google_tests/: CMakeLists.txt
cplusplus/quick_starts/unit_test_frameworks/const_string_lib/tests/google_tests/src/: const_string_tests.cpp
cplusplus/quick_starts/useful_libs_frameworks/: README.org
cplusplus/quick_starts/useful_libs_frameworks/sample_app/: CMakeLists.txt  README.org
cplusplus/quick_starts/useful_libs_frameworks/sample_app/src/: cli_io.hpp  cli_options.cpp  cli_options.hpp  main.cpp  run_examples.hpp  user_input_scnlib.cpp
csharp/: HashCodeAlgoForObject.cs  Readme.md
csharp/Infrastructure/: ConsoleHelper.cs  DirectoryHelper.cs  IConsoleHelper.cs  IDirectoryHelper.cs  IProcessLauncher.cs  MemoryInfoProvider.cs  ProcessLauncher.cs
csharp/LINQ/: LINQHowTos.cs
csharp/WPF/: WPFHowTos.cs
datascience/: .python-version  intro.py  pyproject.toml
datascience/numpy_practice/: numpy_playground.py  pandasIntro.ipynb  trial.ipynb
datascience/numpy_practice/.ipynb_checkpoints/: pandasIntro-checkpoint.ipynb
datascience/pandas_practice/: Project Flyber.ipynb  Udacity_data_product_manager.ipynb  WebScraping_Py_vs_Pandas.ipynb
haskell/: HaskellDev.md  LearnHaskell.md
haskell/standalones/: first.hs
javascript/: Readme.md
python/: .python-version  PercentageBarChart.py  Python_Dev_Setup_Workflow.md  Python_Resources.md  Readme.md  pyproject.toml
python/elegantpython/: cards.py
python/general/: README.md  dynamic_programming.py  howto_printfn.py  practice_int.py  python38_features.py  str_enum.py  unittest_examples.py  using_itertools.org
python/iOS_pythonista/: opengltrial.py
python/numpy_scipy_matplotlib/: subplotrial.py
python/object_oriented/framework_pattern/: progression.py  progression_impls.py  test_progressions.py
python/pytest-examples/: README.md
python/pytest-examples/src/: dataset.py  db_connection.py  employee.py  example_for_mocking.py
python/pytest-examples/tests/: test_calc.py  test_employee.py  test_example_for_mocking.py
python/python_tricks_book/: data_structs.py  name_mangling.py  using_assertions.py
rust/: README.md  Rust_Dev_Setup_Workflow.md  Rust_Resources.md
rust/GuessingGame/: Cargo.toml
rust/GuessingGame/src/: main.rs
rust/Hellorust/: Cargo.toml
rust/Hellorust/src/: main.rs
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_rust/: Cargo.toml
rust/kvstore/: Cargo.toml  README.md
rust/kvstore/src/: database.rs  kvstore.rs  main.rs
rust/lang_concepts/: Cargo.toml
rust/lang_concepts/src/: main.rs
rust/minigrep/: Cargo.toml
rust/minigrep/src/: lib.rs  main.rs
rust/ownership_borrow/: Cargo.toml
rust/ownership_borrow/src/: main.rs
rust/pet_tui/: Cargo.toml  README.md
rust/pet_tui/data/: db.json
rust/pet_tui/src/: main.rs
rust/programming-rust-book/gcd/src/: main.rs
rust/rust_crash_course/: Cargo.toml  README.md
rust/simple_struct/: Cargo.toml
rust/simple_struct/src/: main.rs
webapp/: Readme.md
