[tool.poetry]
name = "ai-ml"
version = "0.1.0"
description = "testing poetry for ai-ml projects"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
numpy = "^1.18.2"
scipy = "^1.4.1"
ipython = "^7.16.3"
scikit-learn = "^1.0.2"
matplotlib = "^3.2.1"
pulp = "^2.1"
jupyterlab = "^3.0.1"

[tool.poetry.dev-dependencies]
2to3 = "^1.0"
black = "^19.10b0"
importmagic = "^0.1.7"
flake8 = "^3.7.9"
pydataset = "^0.2.0"
jupyter-kite = "^2.0.2"
jupyterlab-git = "^0.23.3"
jupyterlab = "^3.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
