[project]
name = "ai-ml"
version = "0.1.0"
description = "testing poetry for ai-ml projects"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8,<4"
dependencies = [
    "pandas>=1.0.3,<2",
    "numpy>=1.18.2,<2",
    "scipy>=1.4.1,<2",
    "ipython>=7.16.3,<8",
    "scikit-learn>=1.0.2,<2",
    "matplotlib>=3.2.1,<4",
    "pulp>=2.1,<3",
    "jupyterlab>=3.0.1,<4",
]

[dependency-groups]
dev = [
    "2to3>=1.0,<2",
    "black>=19.10b0,<20",
    "importmagic>=0.1.7,<0.2",
    "flake8>=3.7.9,<4",
    "pydataset>=0.2.0,<0.3",
    "jupyter-kite>=2.0.2,<3",
    "jupyterlab-git>=0.23.3,<0.24",
    "jupyterlab>=3.4.2,<4",
]

[tool.uv]
default-groups = "all"
