[tool.poetry]
name = "practice"
version = "0.1.0"
description = "for practicing python 3.0"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bpython = "^0.19"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
jedi = "^0.16.0"
ipython = "^7.13.0"
autopep8 = "^1.5.2"
rope = "^0.17.0"
yapf = "^0.30.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
