[tool.poetry]
name = "practice"
version = "0.1.0"
description = "for practicing python 3.0"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bpython = "^0.19"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
jedi = "^0.16.0"
ipython = "^7.13.0"
autopep8 = "^1.5.2"
rope = "^0.17.0"
yapf = "^0.30.0"
mypy = "^0.770"
pylint = "^2.6.0"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.7.0"

[tool.black]
line-length = 79
# target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
