[project]
name = "practice"
version = "0.1.0"
description = "for practicing python 3.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8,<4"
dependencies = [
    "bpython>=0.19,<0.20",
    "requests>=2.27.1,<3",
]

[dependency-groups]
dev = [
    "black>=19.10b0,<20",
    "flake8>=3.7.9,<4",
    "pytest>=5.4.1,<6",
    "jedi>=0.16.0,<0.17",
    "ipython>=7.13.0,<8",
    "autopep8>=1.5.2,<2",
    "rope>=0.17.0,<0.18",
    "yapf>=0.30.0,<0.31",
    "mypy>=0.770,<0.771",
    "pylint>=2.6.0,<3",
    "pytest-sugar>=0.9.4,<0.10",
    "pytest-mock>=3.7.0,<4",
]

[tool.uv]
default-groups = "all"

[tool.black]
line-length = 79
# target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
